fix: add 0-width scrollbar to places / add form reset

--- a/blocks/places/__container/places__container.css
+++ b/blocks/places/__container/places__container.css
@@ -1,6 +1,6 @@
 .places__container {
     width: 100%;
-    max-height: 1250px;
+    max-height: 740px;
     overflow-y: scroll;
     display: grid;
     padding: 0;
@@ -10,4 +10,8 @@
     grid-auto-rows: 1fr;
     grid-auto-flow: row;
     gap: 16px;
+}
+    /*Елизавета, скажите, а это вообще нормальная практика так scrollbar прятать?)*/ 
+.places__container::-webkit-scrollbar {
+    width: 0;
 }
